--- a/rvpPOS/frontend/package.json
+++ b/rvpPOS/frontend/package.json
@@ -9,6 +9,8 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
+    "ant-design-vue": "^3.2.13",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
