--- a/rvpPOS/frontend/package.json
+++ b/rvpPOS/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^3.2.13",
+    "less": "^4.1.3",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
@@ -18,7 +19,10 @@
     "@types/node": "^16.11.68",
     "@vitejs/plugin-vue": "^3.1.2",
     "@vue/tsconfig": "^0.1.3",
+    "autoprefixer": "^10.4.13",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.2",
     "typescript": "~4.7.4",
     "vite": "^3.1.8",
     "vue-tsc": "^1.0.8"
