--- a/rvpPOS/frontend/package.json
+++ b/rvpPOS/frontend/package.json
@@ -10,10 +10,20 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
-    "ant-design-vue": "^3.2.13",
+    "@j-t-mcc/vue3-chartjs": "^1.3.0",
+    "@types/url-join": "^4.0.1",
+    "ant-design-vue": "^3.2.14",
+    "axios": "^1.1.3",
+    "chart.js": "^3.9.1",
+    "chartjs-plugin-datalabels": "^2.1.0",
+    "chartjs-plugin-zoom": "^1.2.1",
+    "dayjs": "^1.11.6",
     "less": "^4.1.3",
+    "numeral": "^2.0.6",
+    "url-join": "^5.0.0",
     "vue": "^3.2.41",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.68",
