--- a/rvpPOS/backend/package.json
+++ b/rvpPOS/backend/package.json
@@ -27,7 +27,7 @@
       "typeorm": "0.3.10"
    },
    "scripts": {
-      "start": "ts-node src/index.ts",
+      "start": "ts-node-dev src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs"
    }
 }
