--- a/rvpPOS/frontend/package.json
+++ b/rvpPOS/frontend/package.json
@@ -22,6 +22,7 @@
     "numeral": "^2.0.6",
     "url-join": "^5.0.0",
     "vue": "^3.2.41",
+    "vue-filter": "^0.2.5",
     "vue-router": "^4.1.6",
     "vuex": "^4.1.0"
   },
