--- a/rvpPOS/backend/package.json
+++ b/rvpPOS/backend/package.json
@@ -28,6 +28,7 @@
    },
    "scripts": {
       "start": "ts-node-dev src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "typeorm": "typeorm-ts-node-commonjs",
+      "build": "tsc"
    }
 }
