--- a/rvpPOS/backend/package.json
+++ b/rvpPOS/backend/package.json
@@ -27,7 +27,7 @@
       "typeorm": "0.3.10"
    },
    "scripts": {
-      "start": "ts-node-dev src/index.ts",
+      "start": "ts-node-dev -r dotenv/config  src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs",
       "build": "tsc && cp *.key .env ecosystem.config.js ./build"
    }
