--- a/rvpPOS/backend/docker-compose.yml
+++ b/rvpPOS/backend/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   backendts:
-    image: backendts
+    image: backend-rvp
     network_mode: bridge
     build:
       context: .
