--- a/rvpPOS/backend/.env
+++ b/rvpPOS/backend/.env
@@ -1,3 +1,3 @@
 ROOT_PATH=/Users/chaiyasittayabovorn/Desktop/vue_nov_2022/rvpPOS/backend
-MONGO_HOST=localhost
-MONGO_PORT=27018
+MONGO_HOST=127.0.0.1
+MONGO_PORT=27017
